fixed overflow

--- a/app/assets/styles/modules/_flex-container.scss
+++ b/app/assets/styles/modules/_flex-container.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
+  overflow: hidden;
   &--row{
     flex-direction: row;
     flex-wrap: wrap;
-    
+
   }
   @mixin atSmall{
       width: 80%;
